Fetching data from server and Displaying in RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MovieApp</string>
+    <string name="api_key">1576ea51939c8e9c28a5c502ce270452</string>
 </resources>
